# realtime-english-transcriber

./: .gitignore  README.md  config.yaml.example  pyproject.toml  requirements.txt
docs/: architecture.md  requirements.md  setup.md
src/: main.py
src/audio/: capture.py
src/gui/: app.py
src/stt/: transcriber.py  vad.py
src/translation/: translator.py
src/utils/: config.py  file_export.py
